llvm/test/fail/46predef.dna
def predef

   def newline
      writeString: "\n"
   
   def writeString: i as int
      writeInteger: i
   
   var writeInteger is int

   writeInteger := 42
   writeString: writeInteger
   newline
